--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistemas RRVV</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/index.html">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div id="login_container">
