--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -5,34 +5,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro Usuario</title>
-    <!--Estilos-->
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">-->
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/register.css">
-    
-    <!--Scripts-->
-    <script src="js/register.js" defer></script>
 </head>
 
 <body>
-    <h1>Registrate aquí!</h1>
-    <form id="register-form">
-        <div class="form-group">
-            <label for="username">Usuario:</label>
-            <input type="text" id="username" name="username" required>
+    <div class="container">
+        <!-- Lado izquierdo - Fondo blanco -->
+        <div class="welcome-section">
+            <div class="welcome-content">
+                <h2>¡Bienvenido!</h2>
+                <p>Únete a nuestra comunidad y disfruta de todos los beneficios que tenemos para ti.</p>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+
+        <!-- Lado derecho - Formulario con fondo azul estrella -->
+        <div class="form-section">
+            <!-- Efecto de estrellas -->
+            <div class="stars"></div>
+
+            <div class="form-container">
+                <h1>Registrate aquí!</h1>
+                <form id="register-form">
+                    <div class="form-group">
+                        <label for="username">Usuario:</label>
+                        <input type="text" id="username" name="username" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Contraseña:</label>
+                        <input type="password" id="password" name="password" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password-confirm">Confirmar Contraseña:</label>
+                        <input type="password" id="password-confirm" name="password-confirm" required>
+                    </div>
+                    <button type="submit">Registrarse</button>
+                </form>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <div class="form-group">
-            <label for="password-confirm">Confirmar Contraseña:</label>
-            <input type="password" id="password-confirm" name="password-confirm" required>
-        </div>
-        <button type="submit">Registrarse</button>
-    </form>
-    <div id="register_message"></div>
+    </div>
 </body>
+
+</html>
