--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -26,7 +26,7 @@
         <label for="confirm_password">Confirmar contraseña:</label><br>
         <input type="password" id="confirm_password" name="confirm_password" required><br><br>
 
-        <label for="profile_picture">Foto de perfil:</label><br>
+        <label for="profile_picture">Foto de perfil: (NO IMPLEMENTADO)</label><br>
         <input type="file" id="profile_picture" name="profile_picture" accept="image/*"><br><br>
 
         <input type="submit" value="Guardar cambios">
