--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,8 +13,8 @@
 </head>
 <body>
     <h1>Editar usuario</h1>
-    
-    <form action="#" method="post" enctype="multipart/form-data">
+
+    <form id="edit_user_form">
         <label for="username">Nombre de usuario:</label><br>
         <input type="text" id="username" name="username" required><br><br>
 
