--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -23,13 +23,13 @@
         </div>
 
         <!-- Lado derecho - Formulario con fondo azul estrella -->
-        <div class="form-section">
+        <div class="form_section">
             <!-- Efecto de estrellas -->
             <div class="stars"></div>
 
             <div class="form-container">
                 <h1>Registrate aquí!</h1>
-                <form id="register-form">
+                <form id="register-form" method="post">
                     <div class="form-group">
                         <label for="username">Usuario:</label>
                         <input type="text" id="username" name="username" required>
