Segundo fix a registro

--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -23,7 +23,7 @@
         </div>
 
         <!-- Lado derecho - Formulario con fondo azul estrella -->
-        <div class="form_section">
+        <div class="form-section">
             <!-- Efecto de estrellas -->
             <div class="stars"></div>
 
