--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -29,7 +29,7 @@
 
             <div class="form-container">
                 <h1>Registrate aquí!</h1>
-                <form id="register-form" method="post">
+                <form id="register-form">
                     <div class="form-group">
                         <label for="username">Usuario:</label>
                         <input type="text" id="username" name="username" required>
