--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -8,8 +8,9 @@
     <!--<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">-->
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/register.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/register.css">
+    <script src="js/register.js"></script>
 </head>
 
 <body>
