--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -24,7 +24,7 @@
         <div class="form-section">
             <!-- Efecto de estrellas -->
             <div class="stars"></div>
-
+            <!--Contenedor del formulario-->
             <div class="form-container">
                 <h1>Registrate aquí!</h1>
                 <form id="register-form">
