Error message register update

--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -7,6 +7,7 @@
     <title>Registro Usuario</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/register.css">
+    <link rel="stylesheet" href="./css/error_user.css">
     <script src="js/register.js" defer></script>
     <script src="js/password_check.js" defer></script>
     <script src="js/toggle_password.js" defer></script>
@@ -58,6 +59,15 @@
                 </form>
             </div>
         </div>
+    </div>
+    <div class = "container-error">
+        <div id="cuadro-error">
+            <div id="container-message">
+                <p id="register_message"> Algo ha ido mal.</p>
+                <button id="close-error">Cerrar</button>
+            </div>
+        </div>
+
     </div>
 </body>
 
