--- a/frontend/login.html
+++ b/frontend/login.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/login.css">
     <!--Scripts-->
     <script src="js/login.js" defer></script>
+    <!--Scripts de hasheo de contraseña-->
+    <script src="https://cdn.jsdelivr.net/npm/bcryptjs@2.4.3/dist/bcrypt.min.js"></script>
+    <script src="js/hash.js"></script>
 </head>
 
 <body>
