Update login, register y edit_user

--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro Usuario</title>
+    <!--Estilos-->
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/register.css">
     <link rel="stylesheet" href="./css/reutilizable/error_user.css">
     <link rel="stylesheet" href="./css/reutilizable/header.css">
     <link rel="stylesheet" href="./css/reutilizable/wave.css">
+    <!--Scripts-->
     <script src="js/register.js" defer></script>
     <script src="js/password_check.js" defer></script>
     <script src="js/toggle_password.js" defer></script>
@@ -31,7 +33,7 @@
         </div>
     </header>
 
-    <!-- Wave Background -->
+    <!-- Semicirculo Background -->
     <div class="wave-background">
         <svg class="wave wave-1" viewBox="0 0 2 1 " preserveAspectRatio="none">
             <path d="M 0 0 A 1 0.4 0 0 0 2,0 L 2,1 L 0,1 Z"></path>
@@ -104,7 +106,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 OxyGo. Todos los derechos reservados.</p>
+        <p>&copy; 2025 OxyGo. Todos los derechos reservados.</p>
     </footer>
 
     <div class = "container-error">
