--- a/frontend/login.html
+++ b/frontend/login.html
@@ -8,6 +8,8 @@
     <!--Estilos-->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="./css/reutilizable/header.css">
+    <link rel="stylesheet" href="./css/reutilizable/wave.css">
     <!--Scripts-->
     <script src="js/login.js" defer></script>
     <!--Scripts de hasheo de contraseña-->
@@ -16,21 +18,61 @@
 </head>
 
 <body>
-    <div id="login_container">
-        <h1>Inicia sesión</h1>
-        <form id="login_form">
-            <div class="form-group">
-                <label for="username_or_email">Usuario o Email:</label>
-                <input type="text" id="username_or_email" name="username_or_email" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Contraseña:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit">Iniciar sesión</button>
-        </form>
-        <div id="login_message"></div>
+    <!--Header-->
+    <header class="header">
+        <div class="header-content">
+            <div class="logo">OxyGo</div>
+            <nav class="nav">
+                <a href="#" class="nav-link">Inicio</a>
+                <a href="#" class="nav-link">Nosotros</a>
+                <a href="#" class="nav-link">Contacto</a>
+            </nav>
+            <button class="profile-button">User</button>
+        </div>
+    </header>
+
+    <!-- Wave Background -->
+    <div class="wave-background">
+        <svg class="wave wave-1" viewBox="0 0 2 1 " preserveAspectRatio="none">
+            <path d="M 0 0 A 1 0.4 0 0 0 2,0 L 2,1 L 0,1 Z"></path>
+        </svg>
     </div>
+
+    <!-- Main Content -->
+    <main class="main-content">
+        <div id="login_container" class="form-container">
+            <h1 class="form-title">Bienvenido</h1>
+            <p class="form-subtitle">Inicia sesión para continuar</p>
+            <form id="login_form" class="register-form" novalidate>
+                <div class="form-group">
+                    <label for="username_or_email" class="form-label">Usuario o Email:</label>
+                    <input 
+                        type="text" 
+                        id="username_or_email"
+                        class="form-input"
+                        name="username_or_email"
+                        placeholder="Usuario o Email"
+                        required>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="form-label">Contraseña:</label>
+                    <input 
+                        type="password" 
+                        id="password" 
+                        name="password" 
+                        class="form-input" 
+                        placeholder="Contraseña"
+                        required>
+                </div>
+                <button type="submit" class="submit-button">Iniciar sesión</button>
+            </form>
+            <p>No tienes cuenta?<a href="./registro.html">Regístrate</a></p>
+            <div id="login_message"></div>
+        </div>
+    </main>
+    <footer class="footer">
+        <p>&copy; 2025 OxyGo. Todos los derechos reservados.</p>
+    </footer>
 </body>
 
 </html>
