Update UX landing

--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -19,7 +19,7 @@
         <div class="header-content">
             <div class="logo">OxyGo</div>
             <nav class="nav">
-                <a href="#" class="nav-link">Inicio</a>
+                <a href="./index.html" class="nav-link">Inicio</a>
                 <a href="#" class="nav-link">Nosotros</a>
                 <a href="#" class="nav-link">Contacto</a>
             </nav>
