--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -25,7 +25,7 @@
         <div class="header-content">
             <div class="logo">OxyGo</div>
             <nav class="nav">
-                <a href="#" class="nav-link">Inicio</a>
+                <a href="./index.html" class="nav-link">Inicio</a>
                 <a href="#" class="nav-link">Nosotros</a>
                 <a href="#" class="nav-link">Contacto</a>
             </nav>
@@ -79,7 +79,7 @@
                         class="form-input" 
                         placeholder="Ingresa tu contraseña"
                     />
-                    <span id="toggle-password">👁️</span>
+                    <!--<span id="toggle-password">👁️</span>-->
                     <span class="error-message" id="passwordError"></span>
                 </div>
 
@@ -92,7 +92,7 @@
                         class="form-input" 
                         placeholder="Confirma tu contraseña"
                     />
-                    <span id="toggle-password-confirm">👁️</span>
+                    <!--<span id="toggle-password-confirm">👁️</span>-->
                     <span class="error-message" id="confirmPasswordError"></span>
                 </div>
 
