--- a/frontend/login.html
+++ b/frontend/login.html
@@ -23,7 +23,7 @@
         <div class="header-content">
             <div class="logo">OxyGo</div>
             <nav class="nav">
-                <a href="#" class="nav-link">Inicio</a>
+                <a href="./index.html" class="nav-link">Inicio</a>
                 <a href="#" class="nav-link">Nosotros</a>
                 <a href="#" class="nav-link">Contacto</a>
             </nav>
