--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,5 +36,9 @@
             
         </div>
     </main>
+
+    <footer class="footer">
+        <p>&copy; 2025 OxyGo. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
