Update register login image profile

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -27,7 +27,7 @@
                 <a href="#" class="nav-link">Nosotros</a>
                 <a href="#" class="nav-link">Contacto</a>
             </nav>
-            <button class="profile-button">User</button>
+            <div class="button-div"></div>
         </div>
     </header>
 
@@ -66,8 +66,9 @@
                 </div>
                 <button type="submit" class="submit-button">Iniciar sesión</button>
             </form>
-            <p>No tienes cuenta?<a href="./registro.html">Regístrate</a></p>
             <div id="login_message"></div>
+            <p>No tienes cuenta?<a href="./registro.html">Regístrate</a></p>
+            
         </div>
     </main>
     <footer class="footer">
