--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -29,7 +29,7 @@
                 <a href="#" class="nav-link">Nosotros</a>
                 <a href="#" class="nav-link">Contacto</a>
             </nav>
-            <button class="profile-button">User</button>
+            <div class="button-div"></div>
         </div>
     </header>
 
@@ -65,7 +65,7 @@
                         id="email" 
                         name="email"
                         class="form-input" 
-                        placeholder="tu@ejemplo.com"
+                        placeholder="example@ejemplo.com"
                     />
                     <span class="error-message" id="emailError"></span>
                 </div>
