--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -17,7 +17,7 @@
     <!--Header-->
     <header class="header">
         <div class="header-content">
-            <div class="logo">OxyGo</div>
+            <div class="logo"><a href="./index.html">OxyGo</a></div>
             <nav class="nav">
                 <a href="./index.html" class="nav-link">Inicio</a>
                 <a href="#" class="nav-link">Nosotros</a>
