--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistemas RRVV</title>
+    <title>OxyGo HomePage</title>
     <!--Estilos-->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/reutilizable/header.css">
