Exportado metoods de cookie para que sean públicos

--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/reutilizable/header.css">
     <link rel="stylesheet" href="css/reutilizable/wave.css">
     <!--Scripts-->
+    <script src="js/retrieve_login_info.js"></script>
     <script src="js/edit_user.js" defer></script>
 </head>
 <body>
