Añadido año de registro a perfil usuario

--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -42,7 +42,7 @@
                 <div class="image-container">
                     <img src="#" class="profile-image">
                     <h1>Usuario</h1>
-                    <p>Usuario activo desde YYYY</p>
+                    <p id="registration_date">Usuario activo desde YYYY</p>
                     <button class="image-button">Cambiar foto</button>
                 </div>
                 <div class="form-container">
