Update terms and conditions

--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -99,7 +99,7 @@
 
                 <div class="checkbox-div">
                     <input type="checkbox" id="checkbox-terms">
-                    <label for="checkbox-terms">Acepto los Términos y condiciones.</label>
+                    <label for="checkbox-terms">Acepto los <a href="https://sites.google.com/view/poltica-de-privacidad-oxigo/inicio" target="_blank">Términos y condiciones.</a></label>
                 </div>
 
                 <button type="submit" class="submit-button">
