Corregido codigo de verificacion

--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -116,7 +116,7 @@
         <p>&copy; 2025 OxyGo. Todos los derechos reservados.</p>
     </footer>
 
-    <div class="body-code">
+    <div class="body-code" id="body-code">
         <div class="container-code">
             <div class="code-text">
                 <h1>Código de verificación</h1>
