Update edit_user and register

--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -73,6 +73,7 @@
 
                 <div class="form-group">
                     <label for="password" class="form-label">Contraseña</label>
+                    <div>
                     <input 
                         type="password" 
                         id="password" 
@@ -80,12 +81,17 @@
                         class="form-input" 
                         placeholder="Ingresa tu contraseña"
                     />
+                    <button id="toggle-password" class="eye-button" type="button">
+                        <img class="img-eye" src="./img/ojo-abierto.png">
+                    </button>
+                    </div>
                     <!--<span id="toggle-password">👁️</span>-->
                     <span class="error-message" id="passwordError"></span>
                 </div>
 
                 <div class="form-group">
                     <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
+                    <div>
                     <input 
                         type="password" 
                         id="password-confirm" 
@@ -93,6 +99,10 @@
                         class="form-input" 
                         placeholder="Confirma tu contraseña"
                     />
+                    <button id="toggle-password" class="eye-button" type="button">
+                        <img class="img-eye" src="./img/ojo-abierto.png">
+                    </button>
+                    </div>/
                     <!--<span id="toggle-password-confirm">👁️</span>-->
                     <span class="error-message" id="confirmPasswordError"></span>
                 </div>
