--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -50,7 +50,7 @@
 
                     <form id="edit_user_form" class="edit-form">
                         <div class="form-group">
-                            <label for="username">Usuario:</label><br>
+                            <label for="username">Usuario:</label>
                             <input type="text" 
                                 id="username" 
                                 name="username"
@@ -60,7 +60,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="email">Correo electrónico:</label><br>
+                            <label for="email">Correo electrónico:</label>
                             <input 
                                 type="email" 
                                 id="email" 
@@ -71,13 +71,35 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="password">Contraseña:</label><br>
+                            <label for="password">Contraseña nueva:</label>
                             <input 
                                 type="password" 
                                 id="password" 
                                 name="password"
                                 class="form-input" 
                                 placeholder="Contraseña"
+                                required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="confirm-password">Confirmar contraseña nueva:</label>
+                            <input 
+                                type="password" 
+                                id="confirm-password" 
+                                name="confirm-password"
+                                class="form-input" 
+                                placeholder="Confirma contraseña"
+                                required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="confirm-actual-password">Confirmar contraseña actual:</label>
+                            <input 
+                                type="password" 
+                                id="password" 
+                                name="confirm-actual-password"
+                                class="form-input" 
+                                placeholder="Confirma contraseña actual"
                                 required>
                         </div>
 
