--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -17,7 +17,7 @@
     <script src="js/password_check.js" defer></script>
     <script src="js/toggle_password.js" defer></script>
     
-    <script type="module" src="js/retrieve_login_info.js"></script>
+    <script src="js/retrieve_login_info.js"></script>
 </head>
 
 <body>
