--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -73,7 +73,7 @@
 
                 <div class="form-group">
                     <label for="password" class="form-label">Contraseña</label>
-                    <div>
+                    <div class="eye-password">
                     <input 
                         type="password" 
                         id="password" 
@@ -82,16 +82,18 @@
                         placeholder="Ingresa tu contraseña"
                     />
                     <button id="toggle-password" class="eye-button" type="button">
-                        <img class="img-eye" src="./img/ojo-abierto.png">
+                        <img class="img-eye" id="open-eye" src="./img/ojo-abierto.png">
+                        <img class="img-eye" id="close-eye" src="./img/ojo-cerrado.png">
                     </button>
                     </div>
+
                     <!--<span id="toggle-password">👁️</span>-->
                     <span class="error-message" id="passwordError"></span>
                 </div>
 
                 <div class="form-group">
                     <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-                    <div>
+                    <div class="eye-password">
                     <input 
                         type="password" 
                         id="password-confirm" 
@@ -99,10 +101,11 @@
                         class="form-input" 
                         placeholder="Confirma tu contraseña"
                     />
-                    <button id="toggle-password" class="eye-button" type="button">
-                        <img class="img-eye" src="./img/ojo-abierto.png">
+                    <button id="toggle-password-confirm" class="eye-button" type="button">
+                        <img class="img-eye" id="open-eye-confirm" src="./img/ojo-abierto.png">
+                        <img class="img-eye" id="close-eye-confirm" src="./img/ojo-cerrado.png">
                     </button>
-                    </div>/
+                    </div>
                     <!--<span id="toggle-password-confirm">👁️</span>-->
                     <span class="error-message" id="confirmPasswordError"></span>
                 </div>
