--- a/frontend/login.html
+++ b/frontend/login.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/reutilizable/wave.css">
     <!--Scripts-->
     <script src="js/login.js" defer></script>
+    <script src="js/retrieve_login_info.js"></script>
 </head>
 
 <body>
