Añadida comprobacion de contraseña actual al editar usuario

--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -96,7 +96,7 @@
                             <label for="confirm-actual-password">Confirmar contraseña actual:</label>
                             <input 
                                 type="password" 
-                                id="password" 
+                                id="current-password" 
                                 name="confirm-actual-password"
                                 class="form-input" 
                                 placeholder="Confirma contraseña actual"
