--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -77,8 +77,7 @@
                                 id="password" 
                                 name="password"
                                 class="form-input" 
-                                placeholder="Contraseña"
-                                required>
+                                placeholder="Contraseña">
                         </div>
 
                         <div class="form-group">
@@ -88,8 +87,7 @@
                                 id="confirm-password" 
                                 name="confirm-password"
                                 class="form-input" 
-                                placeholder="Confirma contraseña"
-                                required>
+                                placeholder="Confirma contraseña">
                         </div>
 
                         <div class="form-group">
