--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OxyGo HomePage</title>
+    <title>OxiGo HomePage</title>
     <!--Estilos-->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/reutilizable/header.css">
@@ -13,7 +13,7 @@
     <!--Header-->
     <header class="header">
         <div class="header-content">
-            <div class="logo">OxyGo</div>
+            <div class="logo">OxiGo</div>
             <nav class="nav">
                 <a href="#" class="nav-link">Inicio</a>
                 <a href="#" class="nav-link">Nosotros</a>
@@ -38,7 +38,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 OxyGo. Todos los derechos reservados.</p>
+        <p>&copy; 2025 OxiGo. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
