--- a/frontend/login.html
+++ b/frontend/login.html
@@ -19,7 +19,7 @@
     <!--Header-->
     <header class="header">
         <div class="header-content">
-            <div class="logo"><a href="./index.html">OxyGo</a></div>
+            <div class="logo"><a href="./index.html">OxiGo</a></div>
             <nav class="nav">
                 <a href="./index.html" class="nav-link">Inicio</a>
                 <a href="#" class="nav-link">Nosotros</a>
@@ -70,7 +70,7 @@
         </div>
     </main>
     <footer class="footer">
-        <p>&copy; 2025 OxyGo. Todos los derechos reservados.</p>
+        <p>&copy; 2025 OxiGo. Todos los derechos reservados.</p>
     </footer>
 </body>
 
