--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="css/edit_user.css">
     <link rel="stylesheet" href="css/reutilizable/header.css">
     <link rel="stylesheet" href="css/reutilizable/wave.css">
+    <link rel="stylesheet" href="css/edit_user_password.css">
     <!--Scripts-->
-    <script src="js/retrieve_login_info.js"></script>
+    <!--<script src="js/retrieve_login_info.js"></script>-->
     <script src="js/edit_user.js" defer></script>
 </head>
 <body>
@@ -90,17 +91,6 @@
                                 placeholder="Confirma contraseña">
                         </div>
 
-                        <div class="form-group">
-                            <label for="confirm-actual-password">Confirmar contraseña actual:</label>
-                            <input 
-                                type="password" 
-                                id="current-password" 
-                                name="confirm-actual-password"
-                                class="form-input" 
-                                placeholder="Confirma contraseña actual"
-                                required>
-                        </div>
-
                         <button type="submit" class="submit-button">
                             Guardar Cambios
                         </button>
@@ -108,10 +98,31 @@
                 </div>
             </div>
         </div>
+
+        
     </main>
 
     <footer class="footer">
         <p>&copy; 2025 OxiGo. Todos los derechos reservados.</p>
     </footer>
+
+    <div class="body-code" id="body-code">
+        <div class="container-password">
+            <div class="password-text">
+                <h1>Confirmación de Seguridad</h1>
+                <p>Para cambiar tu contraseña, por favor, introduce tu contraseña actual.</p>
+            </div>
+            <div class="password">
+                <label for="current-password" class="password-label">Contraseña actual:</label>
+                <input type="password" class="password-input" id="current-password" name="current-password" required>
+            </div>
+            <div class="buttons">
+                <button id="cancel-button">Cancelar</button>
+                <button id="confirm-button">Confirmar</button>
+            </div>
+            
+        </div>
+        <div id="password-error" class="error-password-message"></div>
+    </div>
 </body>
 </html>
