Update inactive sensor list

--- a/frontend/inactive_sensors.html
+++ b/frontend/inactive_sensors.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="./css/reutilizable/header.css">
     <link rel="stylesheet" href="./css/reutilizable/wave.css">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/sensor_list.css">
+    <link rel="stylesheet" href="./css/inactive_sensor_list.css">
 
     <!--Scripts-->
     <!--<script src="js/retrieve_login_info.js"></script>-->
-    <script src="js/sensor_list.js"></script>
+    
 </head>
 
 <body>
@@ -40,7 +40,8 @@
 
     <!-- Main Content -->
     <h1 id="sensores-title">Sensores</h1>
-    <div id="lista-sensores"></div>
+    <div id="lista-sensores" class="sensor-container"></div>
+    <script src="js/inactive_sensor_list.js"></script>
 </body>
 
 </html>
