Logica de roles rehecha
Ahora los roles son un campo del usuario, en vez de un tabla separada. Si el campo es 0 (false) es Usuario. Si es 1 (true), el usuario es Administrador.
He actualizado la logica de login y registro para compatibilizar el cambio con las implementaciones existentes

--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/reutilizable/wave.css">
     <link rel="stylesheet" href="css/edit_user_password.css">
     <!--Scripts-->
-    <!--<script src="js/retrieve_login_info.js"></script>-->
+    <script src="js/retrieve_login_info.js"></script>
     <script src="js/edit_user.js" defer></script>
 </head>
 <body>
