--- a/frontend/incidencias.html
+++ b/frontend/incidencias.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar usuario</title>
     <!--Estilos-->
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/reutilizable/header.css">
-    <link rel="stylesheet" href="css/reutilizable/wave.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/reutilizable/header.css">
+    <link rel="stylesheet" href="./css/reutilizable/wave.css">
+    <link rel="stylesheet" href="./css/incidencias.css">
     <!--Scripts-->
     <script src="js/retrieve_login_info.js"></script>
 </head>
@@ -35,10 +36,34 @@
 
     <!--Main Content-->
     <main class="main-content">
-        <div class="container">
+        <div class="form-container">
             <h1>Incidencias</h1>
             <p>Por favor, describanos el problema que ha tenido con nuestra página web.</p>
+            <form class="formulario-incidencias">
+                <div class="form-group">
+                    <label class="form-label" for="asunto">Asunto: </label>
+                    <input 
+                        type="text"
+                        id="asunto-label"
+                        class="form-input"
+                        name="asunto"
+                        placeholder="Asunto"
+                        required>
+                </div>
+                <div class="form-group">    
+                    <label class="form-label" for="descripcion">Descripción: </label>
+                    <input 
+                        type="text"
+                        id="descripcion-label"
+                        class="form-input"
+                        name="descripcion"
+                        placeholder="Descripcion del problema."
+                        required>
+                </div>
+                <button type="submit" class="submit-button">Iniciar sesión</button>
+            </form>
             
+
             
         </div>
 
