--- a/frontend/incidencias.html
+++ b/frontend/incidencias.html
@@ -50,12 +50,12 @@
                         placeholder="Asunto"
                         required>
                 </div>
-                <div class="form-group">    
+                <div class="form-group">
                     <label class="form-label" for="descripcion">Descripción: </label>
                     <input 
                         type="text"
                         id="descripcion-label"
-                        class="form-input"
+                        class="description-input"
                         name="descripcion"
                         placeholder="Descripcion del problema."
                         required>
