Añadido mapa básico
He creado un mapa con Leaflet que permite ver las mediciones con un heatmap

--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -43,10 +43,10 @@
                 <div class="image-container">
                     <img src="#" class="profile-image">
                     <h1>Usuario</h1>
-                    <!--Ultima actividad-->
-                    <!--<p id="registration_date">Usuario activo desde YYYY</p>-->
+                    Ultima actividad
+                    <p id="registration_date">Usuario activo desde YYYY</p>
                     <!--Boton cambiar foto perfil-->
-                    <!--<button class="image-button">Cambiar foto</button>-->
+                    <button class="image-button">Cambiar foto</button>
                 </div>
                 <div class="form-container">
                     <h1>Información Personal</h1>
