--- a/frontend/incidencias.html
+++ b/frontend/incidencias.html
@@ -60,7 +60,9 @@
                         placeholder="Descripcion del problema."
                         required>
                 </div>
-                <button type="submit" class="submit-button">Iniciar sesión</button>
+                <div class="button-form">
+                    <button type="submit" class="submit-button">Enviar</button>
+                </div>
             </form>
             
 
