--- a/frontend/incidencias.html
+++ b/frontend/incidencias.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/incidencias.css">
     <!--Scripts-->
     <script src="js/retrieve_login_info.js"></script>
-    <script src="js/incidencias_client.js"></script>
+    
 </head>
 <body>
     <!--Header-->
@@ -49,7 +49,7 @@
                         class="form-input"
                         name="asunto"
                         placeholder="Ej: Problema con un sensor."
-                        required>
+                    />
                 </div>
                 <div class="form-group">
                     <label class="form-label" for="descripcion">Descripción: </label>
@@ -58,9 +58,9 @@
                         class="description-input"
                         name="descripcion"
                         placeholder="Descripción del problema."
-                        required>
-                    </textarea>
+                    ></textarea>
                 </div>
+                <div id="message-div"></div>
                 <div class="button-form">
                     <button type="submit" class="submit-button">Enviar</button>
                 </div>
@@ -70,5 +70,5 @@
     <footer class="footer">
         <p>&copy; 2025 OxiGo. Todos los derechos reservados.</p>
     </footer>
-
+    <script src="js/incidencias_client.js"></script>
 </body>
