update incidencias admin

--- a/frontend/incidencias_admin.html
+++ b/frontend/incidencias_admin.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/reutilizable/header.css">
     <link rel="stylesheet" href="css/reutilizable/wave.css">
+    <link rel="stylesheet" href="css/incidencias_admin.css">
     <!--Scripts-->
     <script src="js/retrieve_login_info.js"></script>
 </head>
@@ -44,8 +45,11 @@
                     <tr>
                         <th>ID</th>
                         <th>Usuario</th>
+                        <th>Asunto</th>
                         <th>Descripción</th>
                         <th>Estado</th>
+                        <th>Fecha Reporte</th>
+                        <th>Fecha Actualización</th>
                         <th>Acciones</th>
                     </tr>
                 </thead>
