Arreglada Landing Page y Editar Usuario
He revertido los cambios hechos por @AlexDavid02 a la landing page que loa dejaban sin CSS.
Tambien he eliminado el boton de cambiar foto de perfil junto al cuadro de foto de perfil, pues no disponemos de esa funcionalidad hasta el momento

--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -44,12 +44,12 @@
         <div class="container">
             <div class="profile-container">
                 <div class="image-container">
-                    <img src="#" class="profile-image">
+                    <!-- <img src="#" class="profile-image"> -->
                     <h1>Usuario</h1>
                     Ultima actividad
                     <p id="registration_date">Usuario activo desde YYYY</p>
                     <!--Boton cambiar foto perfil-->
-                    <button class="image-button">Cambiar foto</button>
+                    <!-- <button class="image-button">Cambiar foto</button> -->
                 </div>
                 <div class="form-container">
                     <h1>Información Personal</h1>
