--- a/frontend/map.html
+++ b/frontend/map.html
@@ -5,18 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa de contaminacion</title>
-    <!-- CSS de Leaflet -->
+        
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/reutilizable/header.css">
-    <link rel="stylesheet" href="./css/reutilizable/wave.css">
-    <link rel="stylesheet" href="./css/map.css">
     <!-- JS de Leaflet -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js" defer></script>
     <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js" defer></script>
 
     <script src="js/contamination_map/gen_map.js"></script>
     <script src="js/contamination_map/map_controller.js" defer></script>
+    <!-- CSS de Leaflet (Esto debe estar despues de los scripts de Leaflet) -->
+
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/reutilizable/header.css">
+    <link rel="stylesheet" href="./css/reutilizable/wave.css">
+    <link rel="stylesheet" href="./css/map.css">
 </head>
 
 <body>
@@ -40,21 +42,34 @@
         </svg>
     </div>
 
-    <div>
-        <label for="date-selector">Fecha:</label>
-        <input type="date" id="date-selector">
+    <!--Main Content-->
+    <main class="main-content"> 
+        <div class="map-container">
+            <h1>Mapa de Contaminación</h1>
+            <div class="map-filters">
+                <div class="filter-group">
+                    <label for="date-selector">Fecha:</label>
+                    <input type="date" id="date-selector">
+                </div>
+                <div class="filter-group">
+                <label for="gas-selector">Gas:</label>
+                <select id="gas-selector">
+                    <option value="o3">O₃</option>
+                    <option value="co">CO</option>
+                    <option value="no2">NO₂</option>
+                    <option value="so2">SO₂</option>
+                </select>
+                </div>
+            </div>
 
-        <label for="gas-selector">Gas:</label>
-        <select id="gas-selector">
-            <option value="o3">O₃</option>
-            <option value="co">CO</option>
-            <option value="no2">NO₂</option>
-            <option value="so2">SO₂</option>
-        </select>
-    </div>
-
-    <!-- Contenedor del mapa -->
-    <div id="map" style="width: 100%; height: 1200px;"></div>
+            <!-- Contenedor del mapa -->
+            <div id="map" class="map-leaf"></div>
+        </div>
+    </main>
+    <!--Footer-->
+    <footer class="footer">
+        <p>&copy; 2025 OxiGo. Todos los derechos reservados.</p>
+    </footer>
 </body>
 
 </html>
