--- a/frontend/inactive_sensors.html
+++ b/frontend/inactive_sensors.html
@@ -12,8 +12,9 @@
     <link rel="stylesheet" href="./css/inactive_sensor_list.css">
 
     <!--Scripts-->
-    <!--<script src="js/retrieve_login_info.js"></script>-->
-    
+    <script src="js/retrieve_login_info.js"></script>
+    <script src="js/inactive_sensor_list.js" defer></script>
+
 </head>
 
 <body>
@@ -40,8 +41,18 @@
 
     <!-- Main Content -->
     <h1 id="sensores-title">Sensores</h1>
+    <div id="filtros" class="filter-buttons">
+        <button onclick="cambiarFiltroInactividad(1)">+1 día</button>
+        <button onclick="cambiarFiltroInactividad(7)">+1 semana</button>
+        <button onclick="cambiarFiltroInactividad(30)">+1 mes</button>
+        <button onclick="cambiarFiltroInactividad(180)">+6 meses</button>
+        <button onclick="cambiarFiltroInactividad(0)">Mostrar todos</button>
+    </div>
+    <div id="busquedas" class="search-container">
+        <input type="text" id="busqueda-uuid" placeholder="Buscar por UUID" oninput="aplicarFiltros()">
+        <input type="text" id="busqueda-usuario" placeholder="Buscar por usuario" oninput="aplicarFiltros()">
+    </div>
     <div id="lista-sensores" class="sensor-container"></div>
-    <script src="js/inactive_sensor_list.js"></script>
 </body>
 
 </html>
