Update gas info

--- a/frontend/map.html
+++ b/frontend/map.html
@@ -66,6 +66,30 @@
             <div id="map" class="map-leaf"></div>
         </div>
     </main>
+    <main class="gas-content">
+        <div class="gas-info-container">
+            <div class="gas-one">
+                <div class="gas-info-card">
+                    <h1>Ozono (O₃)</h1>
+                    <p>El ozono a nivel del suelo es un contaminante secundario que se forma por reacciones químicas entre óxidos de nitrógeno (NOx) y compuestos orgánicos volátiles (COV) en presencia de luz solar. Altos niveles de ozono pueden causar problemas respiratorios y agravar enfermedades pulmonares.</p>
+                </div>
+                <div class="gas-info-card">
+                    <h1>Oxido de Carbono (CO)</h1>
+                    <p>El ozono a nivel del suelo es un contaminante secundario que se forma por reacciones químicas entre óxidos de nitrógeno (NOx) y compuestos orgánicos volátiles (COV) en presencia de luz solar. Altos niveles de ozono pueden causar problemas respiratorios y agravar enfermedades pulmonares.</p>
+                </div>
+            </div>
+            <div class="gas-two">
+                <div class="gas-info-card">
+                    <h1>Dioxido de Nitrogeno (NO₂)</h1>
+                    <p>El ozono a nivel del suelo es un contaminante secundario que se forma por reacciones químicas entre óxidos de nitrógeno (NOx) y compuestos orgánicos volátiles (COV) en presencia de luz solar. Altos niveles de ozono pueden causar problemas respiratorios y agravar enfermedades pulmonares.</p>
+                </div>
+                <div class="gas-info-card">
+                    <h1>Dioxido de Azufre (SO₂)</h1>
+                    <p>El ozono a nivel del suelo es un contaminante secundario que se forma por reacciones químicas entre óxidos de nitrógeno (NOx) y compuestos orgánicos volátiles (COV) en presencia de luz solar. Altos niveles de ozono pueden causar problemas respiratorios y agravar enfermedades pulmonares.</p>
+                </div>
+            </div>
+        </div>
+    </main>
     <!--Footer-->
     <footer class="footer">
         <p>&copy; 2025 OxiGo. Todos los derechos reservados.</p>
