--- a/frontend/incidencias.html
+++ b/frontend/incidencias.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar usuario</title>
+    <title>Reportar queja</title>
     <!--Estilos-->
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/reutilizable/header.css">
