--- a/frontend/incidencias_admin.html
+++ b/frontend/incidencias_admin.html
@@ -47,6 +47,27 @@
                         <h3>Asunto de la Incidencia</h3>
                         <p>Descripción breve de la incidencia reportada por el usuario.</p>
                     </div>
+                    <div class="incident-card">
+                        <h3>Asunto de la Incidencia</h3>
+                        <p>Descripción breve de la incidencia reportada por el usuario.</p>
+                    </div>
+                    <div class="incident-card">
+                        <h3>Asunto de la Incidencia</h3>
+                        <p>Descripción breve de la incidencia reportada por el usuario.</p>
+                    </div>
+                    <div class="incident-card">
+                        <h3>Asunto de la Incidencia</h3>
+                        <p>Descripción breve de la incidencia reportada por el usuario.</p>
+                    </div>
+                    <div class="incident-card">
+                        <h3>Asunto de la Incidencia</h3>
+                        <p>Descripción breve de la incidencia reportada por el usuario.</p>
+                    </div>
+                    <div class="incident-card">
+                        <h3>Asunto de la Incidencia</h3>
+                        <p>Descripción breve de la incidencia reportada por el usuario.</p>
+                    </div>
+                    
                 </div>
                 <div id="incidencia-seleccionada" class="select-incident">
                     <h1>Incidencia Seleccionada</h1>
