--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/reutilizable/header.css">
     <link rel="stylesheet" href="css/index.css"><!--no poner antes que el header-->
+    <link rel="stylesheet" href="css/reutilizable/wave.css">
+
+    <!--Scripts-->
+    <script src="js/retrieve_login_info.js"></script>
+    <script src="js/index.js"></script>
 </head>
 
 <body>
@@ -21,10 +26,8 @@
                 <a href="#" class="nav-link">Nosotros</a>
                 <a href="#" class="nav-link">Contacto</a>
             </nav>
-            <div class="sesion-buttons">
-                <a href="./registro.html" class="register-button">Registro</a>
-                <a href="./login.html" class="login-button">Iniciar Sesión</a>
-            </div>
+            <div class="sesion-buttons"></div>
+            
         </div>
     </header>
 
