--- a/frontend/registro.html
+++ b/frontend/registro.html
@@ -43,7 +43,7 @@
     <main class="main-content">
         <div class="form-container">
             <h1 class="form-title">Crear Cuenta</h1>
-            <p class="form-subtitle">Completa el siguiente formulario para registrarte</p>
+            <p class="form-subtitle">Completa el siguiente formulario para registrarte.<br>Todos los campos son obligatorios.</p>
 
             <form id="registerForm" class="register-form" novalidate>
                 <div class="form-group">
